Creando barra de navegación

--- a/index.html
+++ b/index.html
@@ -12,7 +12,23 @@
 </head>
 
 <body>
-    
+    <nav>
+        <div class="navbar__container">
+            <div class="navbar__logo">
+                <h1 class="navbar__title">Inmobiliaria ADL</h1> 
+            </div>
+            <a href="" class="navbar__icons">
+                <img class="navbar__icon navbar__icon--open" src="./assets/images/menu.svg" alt="">
+            </a>
+            <a href="" class="navbar__icons">
+                <img class="navbar__icon navbar__icon--close" src="./assets/images/close.svg" alt="">
+            </a>
+            <div class="navbar__links">
+                <a href="" class="nabvar__link">En venta</a>
+                <a href="" class="nabvar__link">Alquiler</a>
+            </div>
+        </div>
+    </nav>
     <script src="./assets/js/script.js"></script>
 </body>
 
