Terminando barra de navegación

--- a/index.html
+++ b/index.html
@@ -12,23 +12,25 @@
 </head>
 
 <body>
-    <nav>
-        <div class="navbar__container">
-            <div class="navbar__logo">
-                <h1 class="navbar__title">Inmobiliaria ADL</h1> 
+    <div class="container">
+        <nav class="navbar">
+            <div class="navbar__container">
+                <div class="navbar__logo">
+                    <a class="navbar__title" href="">Inmobiliaria ADL</a>
+                </div>
+                <a href="#menu" class="navbar__icons">
+                    <img class="navbar__icon navbar__icon--open" src="./assets/images/menu.svg" alt="">
+                </a>
+                <a href="#" class="navbar__icons">
+                    <img class="navbar__icon navbar__icon--close" src="./assets/images/close.svg" alt="">
+                </a>
+                <div class="navbar__links" id="menu">
+                    <a href="" class="nabvar__link">En venta</a>
+                    <a href="" class="nabvar__link">Alquiler</a>
+                </div>
             </div>
-            <a href="" class="navbar__icons">
-                <img class="navbar__icon navbar__icon--open" src="./assets/images/menu.svg" alt="">
-            </a>
-            <a href="" class="navbar__icons">
-                <img class="navbar__icon navbar__icon--close" src="./assets/images/close.svg" alt="">
-            </a>
-            <div class="navbar__links">
-                <a href="" class="nabvar__link">En venta</a>
-                <a href="" class="nabvar__link">Alquiler</a>
-            </div>
-        </div>
-    </nav>
+        </nav>
+    </div>
     <script src="./assets/js/script.js"></script>
 </body>
 
