Cambiando imagen de fondo de la página

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div class="container">
         <nav class="navbar">
+            <img class="nabvar__img" src="./assets/images/r-architecture-KQgrVfR3r74-unsplash.jpg" alt="">
             <div class="navbar__container">
                 <div class="navbar__logo">
                     <a class="navbar__title" href="">Inmobiliaria ADL</a>
