--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
                 </div>
             </div>
         </nav>
+        <section class="section">
+            <h1 class="section__title">Propiedades en venta</h1>
+            <div class="section__container">
+                <div class="cards__container">
+                    <div class="card">
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
     <script src="./assets/js/script.js"></script>
 </body>
