--- a/index.html
+++ b/index.html
@@ -35,8 +35,23 @@
             <h1 class="section__title">Propiedades en venta</h1>
             <div class="section__container">
                 <div class="cards__container">
-                    <div class="card">
-
+                    <div class="card__body">
+                        <img src="https://fotos.perfil.com/2018/09/21/trim/950/534/nueva-york-09212018-366965.jpg"
+                            alt="" class="card__img">
+                        <h1 class="card__title">Apartamento de lujo en zona exclusiva</h1>
+                        <p class="card__description">Este apartamento de lujo está ubicado en una exclusiva zona
+                            residencial</p>
+                        <div class="card__direction">
+                            <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
+                            <p class="card__text">123 Luxury Lane, Prestige Suburb, CA 45678</p>
+                        </div>
+                        <div class="card__info">
+                            <img src="./assets/images/bed.svg" alt="" class="card__icon card__icon--bed">
+                            <span class="card__info__text">4 Habitaciones</span>
+                            <img src="./assets/images/bath.svg" alt="" class="card__icon card__icon--bath">
+                            <span class="card__info__text">4 Habitaciones</span>
+                        </div>
+                        <p class="card__price">Precio: $ 5000</p>
                     </div>
                 </div>
             </div>
