Terminando apartado propiedades en venta

--- a/index.html
+++ b/index.html
@@ -35,23 +35,102 @@
             <h1 class="section__title">Propiedades en venta</h1>
             <div class="section__container">
                 <div class="cards__container">
-                    <div class="card__body">
+                    <div class="card__body__container">
                         <img src="https://fotos.perfil.com/2018/09/21/trim/950/534/nueva-york-09212018-366965.jpg"
                             alt="" class="card__img">
-                        <h1 class="card__title">Apartamento de lujo en zona exclusiva</h1>
-                        <p class="card__description">Este apartamento de lujo está ubicado en una exclusiva zona
-                            residencial</p>
-                        <div class="card__direction">
-                            <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
-                            <p class="card__text">123 Luxury Lane, Prestige Suburb, CA 45678</p>
+                        <div class="card__body">
+                            <h1 class="card__title">Apartamento de lujo en zona exclusiva</h1>
+                            <p class="card__description">Este apartamento de lujo está ubicado en una exclusiva zona
+                                residencial</p>
+                            <div class="card__direction">
+                                <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
+                                <p class="card__text">123 Luxury Lane, Prestige Suburb, CA 45678</p>
+                            </div>
+                            <div class="card__info">
+                                <img src="./assets/images/bed.svg" alt="" class="card__icon card__icon--bed">
+                                <span class="card__info__text">4 Habitaciones |</span>
+                                <img src="./assets/images/bath.svg" alt="" class="card__icon card__icon--bath">
+                                <span class="card__info__text">4 Baños</span>
+                            </div>
+                            <p class="card__price">Precio: $ 5000</p>
+                            <div class="card__inportant__info__container">
+                                <div class="card__inportant__info">
+                                    <img src="./assets/images/cigarette.svg" alt=""
+                                        class="card__icon card__icon--no-smooking">
+                                    <span
+                                        class="card__inportant__info__text card__inportant__info__text--no-smooking">No
+                                        se permite fumar</span>
+                                </div>
+                                <div class="card__inportant__info">
+                                    <img src="./assets/images/block.svg" alt="" class="card__icon">
+                                    <span class="card__inportant__info__text card__inportant__info__text--no-pets">No se
+                                        permiten mascotas</span>
+                                </div>
+                            </div>
                         </div>
-                        <div class="card__info">
-                            <img src="./assets/images/bed.svg" alt="" class="card__icon card__icon--bed">
-                            <span class="card__info__text">4 Habitaciones</span>
-                            <img src="./assets/images/bath.svg" alt="" class="card__icon card__icon--bath">
-                            <span class="card__info__text">4 Habitaciones</span>
+                    </div>
+                    <div class="card__body__container">
+                        <img src="https://cdn.bioguia.com/embed/3d0fb0142790e6b90664042cbafcb1581427139/furgoneta.jpg"
+                            alt="" class="card__img">
+                        <div class="card__body">
+                            <h1 class="card__title">Apartamento acogedor en la montaña</h1>
+                            <p class="card__description">Este apartamento acogedor está situado en lo alto de una
+                                montaña con impresionantes vista</p>
+                            <div class="card__direction">
+                                <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
+                                <p class="card__text">789 Mountain Road, Summit Peaks, CA 23456</p>
+                            </div>
+                            <div class="card__info">
+                                <img src="./assets/images/bed.svg" alt="" class="card__icon card__icon--bed">
+                                <span class="card__info__text">2 Habitaciones |</span>
+                                <img src="./assets/images/bath.svg" alt="" class="card__icon card__icon--bath">
+                                <span class="card__info__text">1 Baños</span>
+                            </div>
+                            <p class="card__price">Precio: $ 1200</p>
+                            <div class="card__inportant__info__container">
+                                <div class="card__inportant__info">
+                                    <img src="./assets/images/smoking_rooms_FILL1_wght400_GRAD0_opsz24.svg" alt=""
+                                        class="card__icon card__icon--smooking">
+                                    <span class="card__inportant__info__text card__inportant__info__text--smooking">Se
+                                        permite fumar</span>
+                                </div>
+                                <div class="card__inportant__info">
+                                    <img src="./assets/images/pets.svg" alt="" class="card__icon">
+                                    <span class="card__inportant__info__text card__inportant__info__text--pets">Se
+                                        permiten mascotas</span>
+                                </div>
+                            </div>
                         </div>
-                        <p class="card__price">Precio: $ 5000</p>
+                    </div>
+                    <div class="card__body__container">
+                        <img src="https://resizer.glanacion.com/resizer/fhK-tSVag_8UGJjPMgWrspslPoU=/768x0/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/CUXVMXQE4JD5XIXX4X3PDZAVMY.jpg"
+                            alt="" class="card__img">
+                        <div class="card__body">
+                            <h1 class="card__title">Penthouse de lujo con terraza panorámica</h1>
+                            <p class="card__description">Este penthouse de lujo ofrece una terraza panorámica con vistas espectaculares</p>
+                            <div class="card__direction">
+                                <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
+                                <p class="card__text">567 Skyline Avenue, Skyview City, CA 56789</p>
+                            </div>
+                            <div class="card__info">
+                                <img src="./assets/images/bed.svg" alt="" class="card__icon card__icon--bed">
+                                <span class="card__info__text">3 Habitaciones |</span>
+                                <img src="./assets/images/bath.svg" alt="" class="card__icon card__icon--bath">
+                                <span class="card__info__text">3 Baños</span>
+                            </div>
+                            <p class="card__price">Precio: $ 4500</p>
+                            <div class="card__inportant__info__container">
+                                <div class="card__inportant__info">
+                                    <img src="./assets/images/cigarette.svg" alt=""
+                                        class="card__icon card__icon--no-smooking">
+                                    <span class="card__inportant__info__text">No se permite fumar</span>
+                                </div>
+                                <div class="card__inportant__info">
+                                    <img src="./assets/images/pets.svg" alt="" class="card__icon">
+                                    <span class="card__inportant__info__text card__inportant__info__text--pets">Se permiten mascotas</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
