Creando vículo para propiedades en venta

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                             </div>
                         </div>
                     </div>
+                    <a class="card__section__link card__section__link--for-sale" href="">Ver todas las propiedades en venta</a>
                 </div>
             </div>
         </section>
