Creando sección propiedades en alquiler

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </nav>
-        <section class="section">
+        <section class="section__forsale">
             <h1 class="section__title">Propiedades en venta</h1>
             <div class="section__container">
                 <div class="cards__container">
@@ -133,6 +133,109 @@
                         </div>
                     </div>
                     <a class="card__section__link card__section__link--for-sale" href="">Ver todas las propiedades en venta</a>
+                </div>
+            </div>
+        </section>
+        <section class="section__forrent">
+            <h1 class="section__title section__title--for-rent">Propiedades en alquiler</h1>
+            <div class="section__container">
+                <div class="cards__container">
+                    <div class="card__body__container">
+                        <img src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8YXBhcnRtZW50fGVufDB8MHwwfHx8MA%3D%3D&auto=format&fit=crop&w=700&q=60"
+                            alt="" class="card__img">
+                        <div class="card__body">
+                            <h1 class="card__title">Apartamento en el centro de la ciudad</h1>
+                            <p class="card__description">Este apartamento de 2 habitaciones está ubicado en el corazón de la ciudad, cerca de todo.</p>
+                            <div class="card__direction">
+                                <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
+                                <p class="card__text">123 Main Street, Anytown, CA 91234</p>
+                            </div>
+                            <div class="card__info">
+                                <img src="./assets/images/bed.svg" alt="" class="card__icon card__icon--bed">
+                                <span class="card__info__text">2 Habitaciones |</span>
+                                <img src="./assets/images/bath.svg" alt="" class="card__icon card__icon--bath">
+                                <span class="card__info__text">2 Baños</span>
+                            </div>
+                            <p class="card__price">Precio: $ 2000</p>
+                            <div class="card__inportant__info__container">
+                                <div class="card__inportant__info">
+                                    <img src="./assets/images/cigarette.svg" alt=""
+                                        class="card__icon card__icon--no-smooking">
+                                    <span
+                                        class="card__inportant__info__text card__inportant__info__text--no-smooking">No
+                                        se permite fumar</span>
+                                </div>
+                                <div class="card__inportant__info">
+                                    <img src="./assets/images/pets.svg" alt="" class="card__icon">
+                                    <span class="card__inportant__info__text card__inportant__info__text--pets">Se
+                                        permiten mascotas</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card__body__container">
+                        <img src="https://images.unsplash.com/photo-1669071192880-0a94316e6e09?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
+                            alt="" class="card__img">
+                        <div class="card__body">
+                            <h1 class="card__title">Apartamento luminoso con vista al mar</h1>
+                            <p class="card__description">Este hermoso apartamento ofrece una vista impresionante al mar</p>
+                            <div class="card__direction">
+                                <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
+                                <p class="card__text">456 Ocean Avenue, Seaside Town, CA 56789</p>
+                            </div>
+                            <div class="card__info">
+                                <img src="./assets/images/bed.svg" alt="" class="card__icon card__icon--bed">
+                                <span class="card__info__text">3 Habitaciones |</span>
+                                <img src="./assets/images/bath.svg" alt="" class="card__icon card__icon--bath">
+                                <span class="card__info__text">3 Baños</span>
+                            </div>
+                            <p class="card__price">Precio: $ 2500</p>
+                            <div class="card__inportant__info__container">
+                                <div class="card__inportant__info">
+                                    <img src="./assets/images/smoking_rooms_FILL1_wght400_GRAD0_opsz24.svg" alt=""
+                                        class="card__icon card__icon--smooking">
+                                    <span class="card__inportant__info__text card__inportant__info__text--smooking">Se
+                                        permite fumar</span>
+                                </div>
+                                <div class="card__inportant__info">
+                                    <img src="./assets/images/pets.svg" alt="" class="card__icon">
+                                    <span class="card__inportant__info__text card__inportant__info__text--pets">Se
+                                        permiten mascotas</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card__body__container">
+                        <img src="https://images.unsplash.com/photo-1567496898669-ee935f5f647a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNvbmRvfGVufDB8MHwwfHx8MA%3D%3D&auto=format&fit=crop&w=1000&q=60"
+                            alt="" class="card__img">
+                        <div class="card__body">
+                            <h1 class="card__title">Condominio moderno en zona residencial</h1>
+                            <p class="card__description">Este elegante condominio moderno está ubicado en una tranquila zona residencial</p>
+                            <div class="card__direction">
+                                <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
+                                <p class="card__text">123 Main Street, Anytown, CA 91234</p>
+                            </div>
+                            <div class="card__info">
+                                <img src="./assets/images/bed.svg" alt="" class="card__icon card__icon--bed">
+                                <span class="card__info__text">2 Habitaciones |</span>
+                                <img src="./assets/images/bath.svg" alt="" class="card__icon card__icon--bath">
+                                <span class="card__info__text">2 Baños</span>
+                            </div>
+                            <p class="card__price">Precio: $ 2200</p>
+                            <div class="card__inportant__info__container">
+                                <div class="card__inportant__info">
+                                    <img src="./assets/images/cigarette.svg" alt=""
+                                        class="card__icon card__icon--no-smooking">
+                                    <span class="card__inportant__info__text">No se permite fumar</span>
+                                </div>
+                                <div class="card__inportant__info">
+                                    <img src="./assets/images/block.svg" alt="" class="card__icon">
+                                    <span class="card__inportant__info__text card__inportant__info__text--no-pets">No se permiten mascotas</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="card__section__link card__section__link--for-sale" href="">Ver todas las propiedades en alquiler</a>
                 </div>
             </div>
         </section>
