--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inmobiliaria ADL</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </nav>
-        <section class="section__forsale">
+        <section class="section section__forsale">
             <h1 class="section__title">Propiedades en venta</h1>
             <div class="section__container">
                 <div class="cards__container">
@@ -107,7 +107,8 @@
                             alt="" class="card__img">
                         <div class="card__body">
                             <h1 class="card__title">Penthouse de lujo con terraza panorámica</h1>
-                            <p class="card__description">Este penthouse de lujo ofrece una terraza panorámica con vistas espectaculares</p>
+                            <p class="card__description">Este penthouse de lujo ofrece una terraza panorámica con vistas
+                                espectaculares</p>
                             <div class="card__direction">
                                 <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
                                 <p class="card__text">567 Skyline Avenue, Skyview City, CA 56789</p>
@@ -127,16 +128,17 @@
                                 </div>
                                 <div class="card__inportant__info">
                                     <img src="./assets/images/pets.svg" alt="" class="card__icon">
-                                    <span class="card__inportant__info__text card__inportant__info__text--pets">Se permiten mascotas</span>
+                                    <span class="card__inportant__info__text card__inportant__info__text--pets">Se
+                                        permiten mascotas</span>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <a class="card__section__link card__section__link--for-sale" href="">Ver todas las propiedades en venta</a>
                 </div>
             </div>
+            <a class="card__section__link card__section__link--for-sale" href="">Ver todas las propiedades en venta</a>
         </section>
-        <section class="section__forrent">
+        <section class="section section__forrent">
             <h1 class="section__title section__title--for-rent">Propiedades en alquiler</h1>
             <div class="section__container">
                 <div class="cards__container">
@@ -145,7 +147,8 @@
                             alt="" class="card__img">
                         <div class="card__body">
                             <h1 class="card__title">Apartamento en el centro de la ciudad</h1>
-                            <p class="card__description">Este apartamento de 2 habitaciones está ubicado en el corazón de la ciudad, cerca de todo.</p>
+                            <p class="card__description">Este apartamento de 2 habitaciones está ubicado en el corazón
+                                de la ciudad, cerca de todo.</p>
                             <div class="card__direction">
                                 <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
                                 <p class="card__text">123 Main Street, Anytown, CA 91234</p>
@@ -178,7 +181,8 @@
                             alt="" class="card__img">
                         <div class="card__body">
                             <h1 class="card__title">Apartamento luminoso con vista al mar</h1>
-                            <p class="card__description">Este hermoso apartamento ofrece una vista impresionante al mar</p>
+                            <p class="card__description">Este hermoso apartamento ofrece una vista impresionante al mar
+                            </p>
                             <div class="card__direction">
                                 <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
                                 <p class="card__text">456 Ocean Avenue, Seaside Town, CA 56789</p>
@@ -210,7 +214,8 @@
                             alt="" class="card__img">
                         <div class="card__body">
                             <h1 class="card__title">Condominio moderno en zona residencial</h1>
-                            <p class="card__description">Este elegante condominio moderno está ubicado en una tranquila zona residencial</p>
+                            <p class="card__description">Este elegante condominio moderno está ubicado en una tranquila
+                                zona residencial</p>
                             <div class="card__direction">
                                 <img src="./assets/images/location.svg" alt="" class="card__icon card__icon--location">
                                 <p class="card__text">123 Main Street, Anytown, CA 91234</p>
@@ -230,14 +235,17 @@
                                 </div>
                                 <div class="card__inportant__info">
                                     <img src="./assets/images/block.svg" alt="" class="card__icon">
-                                    <span class="card__inportant__info__text card__inportant__info__text--no-pets">No se permiten mascotas</span>
+                                    <span class="card__inportant__info__text card__inportant__info__text--no-pets">No se
+                                        permiten mascotas</span>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <a class="card__section__link card__section__link--for-sale" href="">Ver todas las propiedades en alquiler</a>
+
                 </div>
             </div>
+            <a class="card__section__link card__section__link--for-sale" href="">Ver todas las propiedades en
+                alquiler</a>
         </section>
     </div>
     <script src="./assets/js/script.js"></script>
