Creando sección footer

--- a/index.html
+++ b/index.html
@@ -247,6 +247,27 @@
             <a class="card__section__link card__section__link--for-sale" href="">Ver todas las propiedades en
                 alquiler</a>
         </section>
+        <footer class="footer">
+            <div class="footer__container">
+                <div class="footer__first__section">
+                    <p class="footer__directio">Encuentranos en: 3564 20# Street, Anytown</p>
+                    <br>
+                    <p class="footer__contact">+564.6548.215</p>
+                    <br>
+                    <p class="footer__info">Horario atención: Lu. a Sab. de 10 a 14 hrs y de 15 a 18 hrs.</p>
+                </div>
+                <h1 class="footer__logo">Inmobiliaria ADL</h1>
+                <div class="footer__social">
+                    <h3>Síguenos</h3>
+                    <a href="">
+                        <img src="./assets/images/facebook.svg" alt="" class="footer__icon">
+                    </a>
+                    <a href="">
+                        <img src="./assets/images/instagram.svg" alt="" class="footer__icon">
+                    </a>
+                </div>
+            </div>
+        </footer>
     </div>
     <script src="./assets/js/script.js"></script>
 </body>
