Creando páginas para asignar templates

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img class="nabvar__img" src="./assets/images/r-architecture-KQgrVfR3r74-unsplash.jpg" alt="">
             <div class="navbar__container">
                 <div class="navbar__logo">
-                    <a class="navbar__title" href="">Inmobiliaria ADL</a>
+                    <a class="navbar__title" href="index.html">Inmobiliaria ADL</a>
                 </div>
                 <a href="#menu" class="navbar__icons">
                     <img class="navbar__icon navbar__icon--open" src="./assets/images/menu.svg" alt="">
@@ -26,8 +26,8 @@
                     <img class="navbar__icon navbar__icon--close" src="./assets/images/close.svg" alt="">
                 </a>
                 <div class="navbar__links" id="menu">
-                    <a href="" class="nabvar__link">En venta</a>
-                    <a href="" class="nabvar__link">Alquiler</a>
+                    <a href="propiedades_venta.html" class="nabvar__link">En venta</a>
+                    <a href="propiedades_alquiler.html" class="nabvar__link">Alquiler</a>
                 </div>
             </div>
         </nav>
@@ -136,7 +136,7 @@
                     </div>
                 </div>
             </div>
-            <a class="card__section__link card__section__link--for-sale" href="">Ver todas las propiedades en venta</a>
+            <a class="card__section__link card__section__link--for-sale" href="propiedades_venta.html">Ver todas las propiedades en venta</a>
         </section>
         <section class="section section__forrent">
             <h1 class="section__title section__title--for-rent">Propiedades en alquiler</h1>
@@ -244,7 +244,7 @@
 
                 </div>
             </div>
-            <a class="card__section__link card__section__link--for-sale" href="">Ver todas las propiedades en
+            <a class="card__section__link card__section__link--for-sale" href="propiedades_alquiler.html">Ver todas las propiedades en
                 alquiler</a>
         </section>
         <footer class="footer">
