--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
                     </div>
                 </div>
             </div>
-            <a class="card__section__link card__section__link--for-sale" href="propiedades_venta.html">Ver todas las propiedades en venta</a>
+            <a class="card__section__link card__section__link--for-sale" href="propiedades_venta.html">Ver todas las
+                propiedades en venta</a>
         </section>
         <section class="section section__forrent">
             <h1 class="section__title section__title--for-rent">Propiedades en alquiler</h1>
@@ -244,7 +245,8 @@
 
                 </div>
             </div>
-            <a class="card__section__link card__section__link--for-sale" href="propiedades_alquiler.html">Ver todas las propiedades en
+            <a class="card__section__link card__section__link--for-sale" href="propiedades_alquiler.html">Ver todas las
+                propiedades en
                 alquiler</a>
         </section>
         <footer class="footer">
