Terminando cards en html ventas

--- a/propiedades_venta.html
+++ b/propiedades_venta.html
@@ -36,7 +36,6 @@
                   
                 </div>
             </div>
-            <a class="card__section__link card__section__link--for-sale" href="propiedades_venta.html">Ver todas las propiedades en venta</a>
         </section>
         <footer class="footer">
             <div class="footer__container">
@@ -60,6 +59,6 @@
             </div>
         </footer>
     </div>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/script_venta.js"></script>
 </body>
 </html>
