Creando cards en html alquiler

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <a class="card__section__link card__section__link--for-sale" href="propiedades_venta.html">Ver todas las
                 propiedades en venta</a>
         </section>
-        <section class="section section__forrent">
+        <section class="section">
             <h1 class="section__title section__title--for-rent">Propiedades en alquiler</h1>
             <div class="section__container">
                 <div class="cards__container">
