--- a/propiedades_alquiler.html
+++ b/propiedades_alquiler.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <nav class="navbar">
@@ -30,14 +32,12 @@
             </div>
         </nav>
         <section class="section section__forrent">
-            <h1 class="section__title section__title--for-rent">Propiedades en alquiler</h1>
+            <h1 class="section__title section__title--for-rent">Todas las propiedades en alquiler</h1>
             <div class="section__container">
-                <div class="cards__container">
-                   
+                <div class="cards__container" id="section2">
+
                 </div>
             </div>
-            <a class="card__section__link card__section__link--for-sale" href="propiedades_alquiler.html">Ver todas las propiedades en
-                alquiler</a>
         </section>
         <footer class="footer">
             <div class="footer__container">
@@ -61,5 +61,7 @@
             </div>
         </footer>
     </div>
+    <script src="./assets/js/script_alquiler.js"></script>
 </body>
+
 </html>
