Añadiendo título en imagen navbar

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="container">
         <nav class="navbar">
             <img class="nabvar__img" src="./assets/images/r-architecture-KQgrVfR3r74-unsplash.jpg" alt="">
+            <h1 class="nabvar__img__title">Encuentra la propiedad de tus sueños</h1>
             <div class="navbar__container">
                 <div class="navbar__logo">
                     <a class="navbar__title" href="index.html">Inmobiliaria ADL</a>
