Ajustando código para mejorar renderización

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
             </div>
             <a class="card__section__link card__section__link--for-sale" href="propiedades_venta.html">Ver todas las
                 propiedades en venta</a>
+                <hr class="separador">
         </section>
         <section class="section">
             <h1 class="section__title section__title--for-rent">Propiedades en alquiler</h1>
